UIP-1511: Added demo page for Link component, refactored componenet to support rendering without count or icon, fixed count spacing issues in component

--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -1,4 +1,5 @@
 .content-link {
+    line-height: inherit;
     a {
         &.detached {
             display: inline-block;
@@ -15,6 +16,12 @@
         }
         .count {
             color: $color-blue-grey;
+            margin-right: $spacing-xs;
+            min-width: 14px;
+            height: 14px;
+            line-height: 1;
+            font-size: 14px;
+            padding: 0;
             &:hover {
                 text-decoration: none;
             }
@@ -23,6 +30,8 @@
         [class*=' icon-'] {
             color: $color-blue-grey;
             display: inline-block;
+            line-height: inherit;
+            padding: 0 $spacing-xs 0 0;
             &:hover {
                 text-decoration: none;
             }
